# VoronoiLatticeDistances

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakeSettings.json  FindBoost.cmake  FindCGAL.cmake  FindEigen3.cmake  FindGemmi.cmake  README.md
CrystaLibrary/: CMakeLists.txt
CrystaLibrary/include/: cifio.h  cmd.h  crystalstructure.h  eigensupport.h  fileio.h  geom.h  geometrystructure.h  kernel.h  linearcomplex.h  periodicpointcloud.h  unitcellreduction.h  voronoicell.h  voronoidiagram.h  vtkcontext.h
CrystaLibrary/src/: cifio.cpp  cmd.cpp  crystalstructure.cpp  fileio.cpp  geom.cpp  geometrystructure.cpp  linearcomplex.cpp  periodicpointcloud.cpp  unitcellreduction.cpp  voronoicell.cpp  voronoidiagram.cpp  vtkcontext.cpp
Install/windows-setup/: Setup.fs
Main/: CMakeLists.txt  compute_voronoidistances.cpp  compute_voronoidistances_fromOFF.cpp
Patch/CGAL-4.14.3/include/CGAL/Cartesian/: function_objects.h
Patch/Gemmi/include/gemmi/: small.hpp
Scripts/: make_dendrogram_heatmap.R
windows-setup/: Setup.fs
